<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/whiteNormal"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        xmlns:toolbar="http://schemas.android.com/apk/res-auto"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        toolbar:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        toolbar:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/title"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/publish_message_title"
                android:textColor="@color/whiteNormal"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/publish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:textSize="20sp"
                android:textColor="@color/headbar_text_color"
                android:text="@string/publish_message_publish"/>
        </RelativeLayout>

    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:padding="@dimen/publish_message_h_margin"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/item_title"
                android:padding="5dp"
                android:background="@drawable/publish_message_edit_text_background"
                android:layout_width="match_parent"
                android:layout_height="@dimen/publish_message_title_height"
                android:hint="@string/publish_item_title"
                android:gravity="top|left"/>

            <EditText
                android:id="@+id/item_price"
                android:padding="5dp"
                android:background="@drawable/publish_message_edit_text_background"
                android:layout_width="match_parent"
                android:layout_height="@dimen/publish_message_price_height"
                android:layout_marginTop="@dimen/publish_message_divider_size"
                android:hint="@string/publish_item_price"
                android:singleLine="true"
                android:inputType="numberDecimal"
                android:gravity="top|left"/>

            <EditText
                android:id="@+id/item_content"
                android:padding="5dp"
                android:background="@drawable/publish_message_edit_text_background"
                android:layout_width="match_parent"
                android:layout_height="@dimen/publish_message_content_height"
                android:layout_marginTop="@dimen/publish_message_divider_size"
                android:hint="@string/publish_item_content"
                android:gravity="top|left"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>