<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary"
        xmlns:toolbar="http://schemas.android.com/apk/res-auto"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        toolbar:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        toolbar:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize">
        <TextView
            android:id="@+id/title"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textColor="@color/whiteNormal"
            android:text="@string/prompt_register"
            android:textSize="20sp" />
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:id="@+id/avatar_area"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_avatar_area_size">
                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/avatar"
                    android:layout_width="@dimen/login_avatar_size"
                    android:layout_height="@dimen/login_avatar_size"
                    android:layout_centerInParent="true" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/login_input_area"
                android:orientation="vertical"
                android:layout_below="@id/avatar_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/login_edit_text_margin_left" >
                <EditText
                    android:id="@+id/register_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/login_edit_text_padding"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/lusername"
                    android:singleLine="true"/>

                <EditText
                    android:id="@+id/register_password"
                    android:layout_marginTop="@dimen/login_edit_text_sperator_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/login_edit_text_padding"
                    android:background="@drawable/edit_text_background"
                    android:password="true"
                    android:hint="@string/lpassword"
                    android:singleLine="true"/>

                <EditText
                    android:id="@+id/register_phone"
                    android:layout_marginTop="@dimen/login_edit_text_sperator_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/login_edit_text_padding"
                    android:background="@drawable/edit_text_background"
                    android:password="true"
                    android:hint="@string/lphone"
                    android:singleLine="true"/>

                <EditText
                    android:id="@+id/register_qq"
                    android:layout_marginTop="@dimen/login_edit_text_sperator_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/login_edit_text_padding"
                    android:background="@drawable/edit_text_background"
                    android:password="true"
                    android:hint="@string/lqq"
                    android:singleLine="true"/>

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/login_edit_text_sperator_size"
                    android:text="@string/btn_register"/>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
