<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        xmlns:toolbar="http://schemas.android.com/apk/res-auto"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        toolbar:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        toolbar:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:textColor="@color/whiteNormal"
                android:textSize="20sp"
                android:text="@string/publish_title"
                android:layout_centerInParent="true" />

            <TextView
                android:id="@+id/confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:textColor="@color/headbar_text_color"
                android:text="@string/publish_complete"
                android:textSize="18sp" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.example.secondhandstreet.publish.SimpleImageGrid
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/image_grid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                app:column_num="4"
                app:vertical_spacing="5dp"
                app:horizontal_spacing="5dp"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/publish_panel_vertical_padding"
                android:paddingBottom="@dimen/publish_panel_vertical_padding"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/publish_edit_text_prompt_text"
                    android:layout_marginLeft="@dimen/publish_edit_text_margin_left"
                    android:textColor="@color/publish_prompt"
                    android:text="@string/publish_item_title"/>
                <EditText
                    android:id="@+id/item_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textColor="@color/publish_edit_text"
                    android:layout_marginLeft="@dimen/publish_edit_text_margin_left"
                    android:layout_marginRight="@dimen/publish_edit_text_margin_right"
                    android:background="@drawable/edit_text_background"
                    android:gravity="top|left"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/publish_panel_vertical_padding"
                android:paddingBottom="@dimen/publish_panel_vertical_padding"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/publish_edit_text_prompt_text"
                    android:layout_marginLeft="@dimen/publish_edit_text_margin_left"
                    android:textColor="@color/publish_prompt"
                    android:text="@string/publish_item_price"/>
                <EditText
                    android:id="@+id/item_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textColor="@color/publish_edit_text"
                    android:layout_marginLeft="@dimen/publish_edit_text_margin_left"
                    android:layout_marginRight="@dimen/publish_edit_text_margin_right"
                    android:background="@drawable/edit_text_background"
                    android:singleLine="true"
                    android:inputType="numberDecimal"
                    android:gravity="top|left"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/publish_panel_vertical_padding"
                android:paddingBottom="@dimen/publish_panel_vertical_padding"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/publish_edit_text_prompt_text"
                    android:layout_marginLeft="@dimen/publish_edit_text_margin_left"
                    android:textColor="@color/publish_prompt"
                    android:text="@string/publish_item_location"/>
                <EditText
                    android:id="@+id/item_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textColor="@color/publish_edit_text"
                    android:layout_marginLeft="@dimen/publish_edit_text_margin_left"
                    android:layout_marginRight="@dimen/publish_edit_text_margin_right"
                    android:background="@drawable/edit_text_background"
                    android:gravity="top|left"/>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/choose_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:layout_marginLeft="@dimen/publish_edit_text_margin_left"
                android:layout_marginRight="@dimen/publish_edit_text_margin_right"
                android:paddingTop="15dp"
                android:paddingBottom="15dp">
                <TextView
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/publish_edit_text_prompt_text"
                    android:textColor="@color/publish_prompt"
                    android:text="@string/publish_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/category"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:textSize="@dimen/publish_edit_text_prompt_text"
                    android:layout_marginLeft="@dimen/publish_edit_text_margin_left"
                    android:textColor="@color/publish_prompt"
                    android:text="@string/publish_unsetting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/publish_panel_vertical_padding"
                android:paddingBottom="@dimen/publish_panel_vertical_padding"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/publish_edit_text_prompt_text"
                    android:layout_marginLeft="@dimen/publish_edit_text_margin_left"
                    android:textColor="@color/publish_prompt"
                    android:text="@string/publish_item_content"/>
                <EditText
                    android:id="@+id/item_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textColor="@color/publish_edit_text"
                    android:layout_marginLeft="@dimen/publish_edit_text_margin_left"
                    android:layout_marginRight="@dimen/publish_edit_text_margin_right"
                    android:background="@drawable/edit_text_background"
                    android:gravity="top|left"
                    android:minLines="4"/>
            </LinearLayout>



        </LinearLayout>
    </ScrollView>

</RelativeLayout>