<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/app_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        xmlns:toolbar="http://schemas.android.com/apk/res-auto"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        toolbar:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        toolbar:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/whiteNormal"
            android:textSize="20sp"
            android:text="@string/modify_label" />
    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:id="@+id/item_avatar"
                android:background="?android:attr/selectableItemBackground"
                android:paddingTop="@dimen/mp_item_padding_top"
                android:paddingBottom="@dimen/mp_item_padding_top"
                android:paddingLeft="@dimen/mp_item_padding_left"
                android:paddingRight="@dimen/mp_item_padding_left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:focusable="false"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:textSize="@dimen/mp_item_prompt_text"
                    android:textColor="@color/mp_item_prompt_text"
                    android:text="@string/useravatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <com.facebook.drawee.view.SimpleDraweeView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:focusable="false"
                    android:id="@+id/avatar"
                    android:layout_alignParentRight="true"
                    android:layout_centerHorizontal="true"
                    android:layout_width="@dimen/mp_item_avatar_size"
                    android:layout_height="@dimen/mp_item_avatar_size"
                    app:roundAsCircle="true"/>
            </RelativeLayout>

            <View
                android:layout_marginLeft="@dimen/mp_item_padding_left"
                android:layout_marginRight="@dimen/mp_item_padding_left"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/separator"/>

            <RelativeLayout
                android:id="@+id/item_username"
                android:background="?android:attr/selectableItemBackground"
                android:paddingTop="@dimen/mp_item_padding_top"
                android:paddingBottom="@dimen/mp_item_padding_top"
                android:paddingLeft="@dimen/mp_item_padding_left"
                android:paddingRight="@dimen/mp_item_padding_left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:focusable="false"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:textSize="@dimen/mp_item_prompt_text"
                    android:textColor="@color/mp_item_prompt_text"
                    android:text="@string/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/username"
                    android:focusable="false"
                    android:layout_alignParentRight="true"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/mp_item_content_text"
                    android:textSize="@dimen/mp_item_content_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
            <View
                android:layout_marginLeft="@dimen/mp_item_padding_left"
                android:layout_marginRight="@dimen/mp_item_padding_left"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/separator"/>

            <RelativeLayout
                android:id="@+id/item_password"
                android:background="?android:attr/selectableItemBackground"
                android:paddingTop="@dimen/mp_item_padding_top"
                android:paddingBottom="@dimen/mp_item_padding_top"
                android:paddingLeft="@dimen/mp_item_padding_left"
                android:paddingRight="@dimen/mp_item_padding_left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:focusable="false"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:textSize="@dimen/mp_item_prompt_text"
                    android:textColor="@color/mp_item_prompt_text"
                    android:text="@string/password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/password"
                    android:focusable="false"
                    android:layout_alignParentRight="true"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/mp_item_content_text"
                    android:textSize="@dimen/mp_item_content_text"
                    android:inputType="textPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
            <View
                android:layout_marginLeft="@dimen/mp_item_padding_left"
                android:layout_marginRight="@dimen/mp_item_padding_left"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/separator"/>

            <RelativeLayout
                android:id="@+id/item_phone"
                android:background="?android:attr/selectableItemBackground"
                android:paddingTop="@dimen/mp_item_padding_top"
                android:paddingBottom="@dimen/mp_item_padding_top"
                android:paddingLeft="@dimen/mp_item_padding_left"
                android:paddingRight="@dimen/mp_item_padding_left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:focusable="false"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:textSize="@dimen/mp_item_prompt_text"
                    android:textColor="@color/mp_item_prompt_text"
                    android:text="@string/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/phone"
                    android:focusable="false"
                    android:layout_alignParentRight="true"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/mp_item_content_text"
                    android:textSize="@dimen/mp_item_content_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
            <View
                android:layout_marginLeft="@dimen/mp_item_padding_left"
                android:layout_marginRight="@dimen/mp_item_padding_left"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/separator"/>

            <RelativeLayout
                android:id="@+id/item_qq"
                android:background="?android:attr/selectableItemBackground"
                android:paddingTop="@dimen/mp_item_padding_top"
                android:paddingBottom="@dimen/mp_item_padding_top"
                android:paddingLeft="@dimen/mp_item_padding_left"
                android:paddingRight="@dimen/mp_item_padding_left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:focusable="false"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:textSize="@dimen/mp_item_prompt_text"
                    android:textColor="@color/mp_item_prompt_text"
                    android:text="@string/qq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/qq"
                    android:focusable="false"
                    android:layout_alignParentRight="true"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/mp_item_content_text"
                    android:textSize="@dimen/mp_item_content_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
